[package]
name = "native-tls"
version = "0.2.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A wrapper over a platform's native TLS implementation"
repository = "https://github.com/sfackler/rust-native-tls"
readme = "README.md"

[features]
vendored = ["openssl/vendored"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
# 2.1.0+
security-framework = { git = "https://github.com/kornelski/rust-security-framework", rev = "bf0e647937972408648afdd9884c5f32f6a8aeb5" }
# 2.1.0+
security-framework-sys = { git = "https://github.com/kornelski/rust-security-framework", rev = "bf0e647937972408648afdd9884c5f32f6a8aeb5" }
lazy_static = "1.0"
libc = "0.2"
tempfile = "3.0"

[target.'cfg(target_os = "windows")'.dependencies]
schannel = "0.1.13"

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = "0.10.11"
openssl-sys = "0.9.30"
openssl-probe = "0.1"

[dev-dependencies]
hex = "0.3"
